# TensorRT-Edge-LLM

./: .gitmodules  CMakeLists.txt  README.md  input.json  input_with_images.json  install_trt_edgellm_user_service.sh  trt-edgellm.service  trt-edgellm.service-fp16  trt-edgellm.service.template
cpp/common/: logger.h
docs/: inference_service_design.md  llm_http_server_usage.md
examples/llm/: CMakeLists.txt  http_server_utils.h  llm_inference.cpp
inference_server/: CMakeLists.txt  http_server_utils.h  llm_http_server.cpp
tools/: send_request.sh
unittests/: httpServerUtilsTests.cpp  loggerTests.cpp
